--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <nav class="navbar navbar-expand-lg  #ffc09f ">
         <div class="container">
             <div class="logo">
-                <img src="image/logo.jpg" alt="logo">
+                <img src="https://www.y-axis.com/assets/cms/2022-12/logo.jpg?VersionId=2Jwm6b8PYU8I.5TEP.frBE.OKAYg9mXy" alt="logo">
               </div>    
             <div class=" ms-auto">
                 <div class="btn-group" role="group" aria-label="Basic outlined example">
@@ -112,7 +112,7 @@
                     </div>
                     <div class="col-md-2 mx-auto">
                         <button type="button" class="btn btn-light"><a href="#Australia">
-                            <img src="image/australia.png" alt="Australia">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Flag_of_Australia_%28converted%29.svg/640px-Flag_of_Australia_%28converted%29.svg.png" alt="Australia">
                             <p>Australia</p>
                         </a>
                         </button>
