--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <nav class="navbar navbar-expand-lg  #ffc09f ">
         <div class="container">
             <div class="logo">
-                <img src="image/logo.jpg" alt="logo">
+                <img src="https://www.y-axis.com/assets/cms/2022-12/logo.jpg?VersionId=2Jwm6b8PYU8I.5TEP.frBE.OKAYg9mXy" alt="logo">
               </div>    
             <div class=" ms-auto">
                 <div class="btn-group" role="group" aria-label="Basic outlined example">
